--- a/rest_form/rest_api/templates/register.html
+++ b/rest_form/rest_api/templates/register.html
@@ -1,6 +1,8 @@
+{% include 'head.html' %}
 {% block content %}
-    <div class="container">
-        <form action="{% url 'register' %}" method="post">
+    <div class="container-fluid d-flex justify-content-md-center align-items-center">
+        
+        <!-- <form action="{% url 'register' %}" method="post">
             {% csrf_token %}
             <div class="col-md-8 col-md-offset-2">
                 <div class="panel panel-default">
@@ -34,6 +36,36 @@
                     </div>
                 </div>
             </div>
+
+            
+        </form> -->
+        <form action="{% url 'register' %}" method="post">
+            {% csrf_token %}
+            <div class="panel-heading "><h4>Register</h4></div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Username</label>
+                <div class="col-md-6">
+                    {{ form.username }}
+                </div>
+              </div>
+            
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <div class="col-md-6">
+                {{ form.email }}
+                </div>
+              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+                <div class="col-md-6">
+                    {{ form.password }}
+                </div>
+            </div>
+            <div class="col-auto my-2">
+            <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
         </form>
+
     </div>
 {% endblock %}
