--- a/rest_form/rest_api/templates/user_list.html
+++ b/rest_form/rest_api/templates/user_list.html
@@ -1,10 +1,11 @@
+{% include 'head.html' %}
 {% block content %}
-    <div class="container">
+    <div class="container-fluid">
         <form action="{% url 'list' %}" method="post">
             {% csrf_token %}
             <div class="col-md-8 col-md-offset-2">
                 <div class="panel panel-default">
-                    <div class="panel-heading">Register</div>
+                    <div class="panel-heading "><h4>Register</h4></div>
                     <div class="panel-body">
                         {% if error_message %}
                             <p class="bg-danger p-d ml-b">{{ error_message }}</p>
