--- a/rest_form/rest_api/templates/register.html
+++ b/rest_form/rest_api/templates/register.html
@@ -1,54 +1,60 @@
 {% include 'head.html' %}
 {% block content %}
-    <div class="container-fluid d-flex justify-content-md-center align-items-center">
+    <div class="container-fluid d-flex justify-content-md-center ">
         
         <form action="{% url 'register' %}" method="post">
             {% csrf_token %}
             
-            <div class="panel-heading "><h4>Register</h4></div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Username</label>
-                <div class="col-md-6">
-                    {{ form.username }}
+            <div class="panel-heading"><h4 style="text-align: center;">Register</h4></div>
+              <div class="form-group" >
+                  <label for="exampleInputPassword1">Username</label>
+                  <div class="col-md-6">
+                      {{ form.username }}
+                  </div>
+                  {% if messages %}
+                  {% for msg in messages %}
+                  <small id="emailHelp" class="text-danger">{{msg}}</small>
+                  {% endfor %}
+                  {% else %}
+                  <small id="emailHelp" class="text-danger">{{ form.errors.email }}</small>
+                  {% endif %}
                 </div>
-
-                <small id="emailHelp" class="text-danger">{{ form.errors.username }}</small>
+              
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <div class="col-md-6">
+                  {{ form.email }}
+                  </div>
+                <small id="emailHelp" class="text-danger">{{ form.errors.email }}</small>
               </div>
-            
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <div class="col-md-6">
-                {{ form.email }}
-                </div>
-              <small id="emailHelp" class="text-danger">{{ form.errors.email }}</small>
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-                <div class="col-md-6">
-                    {{ form.password }}
-                </div>
-                <small id="emailHelp" class="text-danger">{{ form.errors.password }}</small>
-            </div>
-            <div class="col-auto my-2">
-            <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-                            
-              <div class="">
-                <small class="alert-heading text-dark">Note!</small>
-                <ul>
-                  <li class="text-danger" style="font-size: x-small;">The password must contain lowercase character.</li>
-                  <li class="text-danger" style="font-size: x-small;">The password must contain uppercase character.</li>
-                  <li class="text-danger" style="font-size: x-small;">The password must contain numbers.</li>
-                  <li class="text-danger" style="font-size: x-small;"> length should be atleast 5.</li>
-                  </ul>
-                
-              </div>   
+              <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                  <div class="col-md-6">
+                      {{ form.password }}
+                  </div>
+                  <small id="emailHelp" class="text-danger">{{ form.errors.password }}</small>
+              </div>
+              <div class="col-auto my-2">
+              <button type="submit" class="btn btn-primary">Submit</button>
+                  </div>
+                              
+                <div class="">
+                  <small class="alert-heading text-dark">Note!</small>
+                  <ul>
+                    <li class="text-danger" style="font-size: x-small;">The password must contain lowercase character.</li>
+                    <li class="text-danger" style="font-size: x-small;">The password must contain uppercase character.</li>
+                    <li class="text-danger" style="font-size: x-small;">The password must contain numbers.</li>
+                    <li class="text-danger" style="font-size: x-small;"> length should be atleast 5.</li>
+                    </ul>
+                  
+                </div>   
 
-            <div class="col-auto my-2">
-              <small id="emailHelp" class="text-dark">if you have an account please </small>
-              <a href="{% url 'login' %}" class="text-primary" style="text-decoration:none">Login</a>
-                  </div>    
-        </form>
+              <div class="col-auto my-2">
+                <small id="emailHelp" class="text-dark">if you have an account please </small>
+                <a href="{% url 'login' %}" class="text-primary" style="text-decoration:none">Login</a>
+                    </div>    
+                   
+                  </form>
 
     </div>
 {% endblock %}
