--- a/rest_form/rest_api/templates/update_register.html
+++ b/rest_form/rest_api/templates/update_register.html
@@ -30,8 +30,8 @@
                                 {{ form.password }}
                             </div>
                         </div>
-                        <div class="col-md-6 col-md-offset-4">
-                            <input type="submit" value="Update" class="btn btn-success">
+                        <div class="col-md-6 col-md-offset-4 my-2">
+                            <input type="submit" value="Update" class="btn btn-primary">
                         </div>
                     </div>
                 </div>
