--- a/rest_form/rest_api/templates/login.html
+++ b/rest_form/rest_api/templates/login.html
@@ -3,15 +3,18 @@
 <div class="container-fluid d-flex justify-content-md-center align-items-center">
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        
         <div class="panel-heading "><h4>Login</h4></div>
-        
         <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
+            <label for="exampleInputUsername1">Username</label>
             <div class="col-md-6">
-            {{ form.email }}
+            {{ form.username }}
             </div>
-            <small id="emailHelp" class="text-danger">{{ form.errors.email }}</small>
+            <small id="emailHelp" class="text-danger">{{ form.errors.username }}</small>
+            {% for msg in messages %}
+                {% if msg %}
+                <small id="emailHelp" class="text-danger">{{msg}}</small>
+                {% endif %}
+            {% endfor %}
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
