--- a/rest_form/rest_api/templates/user_list.html
+++ b/rest_form/rest_api/templates/user_list.html
@@ -5,7 +5,7 @@
             {% csrf_token %}
             <div class="col-md-8 col-md-offset-2">
                 <div class="panel panel-default">
-                    <div class="panel-heading "><h4>Register</h4></div>
+                    <div class="panel-heading "><h4>Admin User</h4></div>
                     <div class="panel-body">
                         {% if error_message %}
                             <p class="bg-danger p-d ml-b">{{ error_message }}</p>
