--- a/rest_form/rest_api/templates/blog_upload.html
+++ b/rest_form/rest_api/templates/blog_upload.html
@@ -1,9 +1,9 @@
 {% include 'head.html' %}
 {% block content %}
 <div class="container-fluid d-flex justify-content-md-center align-items-center">
-    <form action="{% url 'article_upload' data.uid %}" method="post" enctype="multipart/form-data">
+    <form action="{% url 'blog_upload' data.uid %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        <div class="panel-heading "><h4>Upload My Article</h4></div>
+        <div class="panel-heading "><h4>Upload My blog</h4></div>
         <div class="form-group my-3">
             <label for="exampleInputUsername1">Title</label>
             <div class="col-md-6">
@@ -32,7 +32,7 @@
         </div>
         
         <div class="col-auto my-2">
-        <button type="submit" class="btn btn-primary">Update Article</button>
+        <button type="submit" class="btn btn-primary">Update blog</button>
             </div>
             
         <!-- <div class="col-auto my-2">
