--- a/rest_form/rest_api/templates/login.html
+++ b/rest_form/rest_api/templates/login.html
@@ -1,37 +1,46 @@
 {% include 'head.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
-<div class="container-fluid d-flex justify-content-md-center align-items-center">
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="panel-heading "><h4>Login</h4></div>
-        <div class="form-group">
-            <label for="exampleInputUsername1">Username</label>
-            <div class="col-md-6">
-            {{ form.username }}
-            </div>
-            <small id="emailHelp" class="text-danger">{{ form.errors.username }}</small>
-            {% for msg in messages %}
-                {% if msg %}
-                <small id="emailHelp" class="text-danger">{{msg}}</small>
-                {% endif %}
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <div class="col-md-6">
-                {{ form.password }}
-            </div>
-            <small id="emailHelp" class="text-danger">{{ form.errors.password }}</small>
-        </div>
-        <div class="col-auto my-2">
-        <button type="submit" class="btn btn-primary">Login</button>
+
+<div class="col-md-7 d-flex align-items-stretch container-fluid d-flex justify-content-md-center align-items-center">
+  <div class="px-lg-4 text-center text-primary w-100">
+      <img src="{{page_kwargs}}image/logo_new.jpg" width="100%" alt="">
+      <h1 class="mb-2 mt-0">Welcome to Login page</h1>
+      <p class="lead text-muted">Remember your memories with one click</p>
+  </div>
+</div>
+<!-- <div class="container h-100 d-flex"> -->
+    <!-- <div class="col-11 align-self-center"> -->
+        <div class="row container-fluid d-flex justify-content-md-center align-items-center">
+            <div class="col-md-4 d-flex align-items-stretch mt-4">
+                <div class="card w-160 px-5 shadow border-0">
+                    <div class="card-body">
+                      <form action="{% url 'login' %}" method="post">
+                        {% csrf_token %}
+                      
+                        {{form|crispy}}
+                          <div class="col-auto my-2">
+                            <small id="emailHelp" class="text-dark">if you dont have an account please 
+                            <a href="{% url 'register' %}" class="text-primary" style="text-decoration:none">Register</a>
+                          </small>      
+                          </div>    
+                                <div class="col-auto my-2">
+                                  <button type="submit" class="btn btn-primary">Login</button>
+                                      </div>
+                                                  
+                                    
+                              </form>                
+                    </div>
+                </div>
             </div>
             
-        <div class="col-auto my-2">
-        <small id="emailHelp" class="text-dark">if you don't have an account please </small>
-        <a href="{% url 'register' %}" class="text-primary" style="text-decoration:none">Register</a>
-            </div>     
-      </form>
-
-</div>      
+        </div>
+    <!-- </div> -->
+<!-- </div> -->
+{% endblock %}
+{% block scripts %}
+<script>
+  // document.getElementById('id_password').setAttribute("oncopy","return false")
+  // document.getElementById('id_password').setAttribute("onpaste","return false")
+</script>
 {% endblock %}
