--- a/rest_form/rest_api/templates/blog_image_upload.html
+++ b/rest_form/rest_api/templates/blog_image_upload.html
@@ -5,27 +5,28 @@
 <div class="col-md-7 d-flex align-items-stretch container-fluid d-flex justify-content-md-center align-items-center">
   <div class="px-lg-4 text-center text-primary w-100">
       <img src="{{page_kwargs}}image/logo_new.jpg" width="100%" alt="">
-      <h1 class="mb-2 mt-0">Upload the Blog</h1>
+      <h1 class="mb-2 mt-0">Change the Image</h1>
       <p class="lead text-muted">Remember your memories with one click</p>
   </div>
 </div>
 <!-- <div class="container h-100 d-flex"> -->
     <!-- <div class="col-11 align-self-center"> -->
         <div class="row container-fluid d-flex justify-content-md-center align-items-center">
-            <div class="col-md-5 d-flex align-items-center mt-5">
-                <div class="card px-5 shadow border-0">
-                    <div class="card-body" style="resize: both; width: 100%; height: 100%;">
-                        <form action="{% url 'blog_upload' data.uid %}" method="post" enctype="multipart/form-data">
+            <div class="col-md-4 d-flex align-items-stretch mt-4">
+                <div class="card w-160 px-5 shadow border-0">
+                    <div class="card-body">
+                      <form action="" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
-                      
-                        {{form|crispy}}
-                             
                         <div class="col-auto my-2">
-                            <button type="submit" class="btn btn-primary">Upload Blog</button>
+                        <label for="formFileMultiple" class="form-label">Upload Images</label>
+                        <input class="form-control" name="images" type="file" multiple>
+                              
+                        
+                            <button type="submit" class="btn btn-primary my-3">Upload</button>
                                 </div>
                                             
                                     
-                              </form>                
+                        </form>                
                     </div>
                 </div>
             </div>
