--- a/rest_form/rest_api/templates/blog_list.html
+++ b/rest_form/rest_api/templates/blog_list.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     {% include 'head.html' %}
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -48,6 +49,19 @@
             <li><a href="#" class="text-white">Follow on Twitter</a></li>
             <li><a href="#" class="text-white">Like on Facebook</a></li>
             <li><a href="#" class="text-white">Email me</a></li>
+            {% if logged == True %}
+            <li><a href="{% url 'logout' %}" class="text-white">Logout</a></li>
+            {% else %}
+            <li><a href="{% url 'login' %}" class="text-white">Login</a></li>
+            {% endif %}
+            <li>
+              <div class="modeswitch-wrap" id="darkModeSwitch">
+                  <div class="modeswitch-item">
+                      <div class="modeswitch-icon"></div>
+                  </div>
+                  <span class="text-white">Dark mode</span>
+              </div>
+          </li>
           </ul>
         </div>
       </div>
@@ -55,10 +69,23 @@
   </div>
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
-      <a href="#" class="navbar-brand d-flex align-items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
-        <strong>Album</strong>
+      {% if admin == True %}
+      <a href="{% url 'blog' %}" class="navbar-brand d-flex align-items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+          <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+        </svg>
+        <strong class="mr-1" style="margin: 10px;">Add Blog</strong>
       </a>
+      {% else %}
+      <a href="#" class="navbar-brand d-flex align-items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+          <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+        </svg>
+        <strong style="margin: 10px;"> Blog</strong>
+      </a>
+      {% endif %}
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -71,7 +98,7 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">My Blog</h1>
+        <h1 class="fw-light">My Recent Blogs</h1>
         <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
         <!-- <p>
           <a href="#" class="btn btn-primary my-2">Main call to action</a>
@@ -81,16 +108,21 @@
     </div>
   </section>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-  {% for blog_data in blog_datas %}
-  <div class="album py-5 bg-light">
-    <div class="container">
+  {% if blog_datas %}
+    {% for blog_data in blog_datas %}
+  <div class="album py-5">
+    <div class="container" style="display: flex; justify-content: center; align-items: center;">
 
       <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"> -->
-        <div class="col">
+        <div class="col border border-light shadow border-0">
           <!-- <a href="{% url 'blog_detail_page' blog_data.uid %}" style="text-decoration:none; color: black;">  -->
           <div class="card shadow-sm">
-            {% if blog_data.image %} 
-            <img class="card-img-top" style="width: 100%; height: 15vw; object-fit: cover;" src="{{blog_data.image.url}}" alt="Card image cap">
+            {% if images %} 
+            {% for image in images %}
+            {% if blog_data == image.blog %}
+            <img class="card-img-top" style="width: 100%; height: 25vw; display: flex; object-fit: cover; justify-content: center; align-items: center;" src="{{image.images.url}}" alt="Card image cap" >
+            {% endif %}
+            {% endfor %}
             {% else %}
             <svg class="bd-placeholder-img card-img-top" style="width: 100%; height: 15vw; object-fit: cover;" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             {% endif %}
@@ -102,18 +134,18 @@
                 <div class="btn-group">
                     {% if admin == True %}
           
-                    <a href="{% url 'blog_upload' blog_data.uid %}">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Update</button>
-                    </a>
-                    <a href="{% url 'blog_delete' blog_data.uid %}">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                    </a>
-                    <a href="{% url 'blog_detail_page' blog_data.uid %}">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Read more</button>
-                    </a>
+                      <a href="{% url 'blog_upload' blog_data.uid %}">
+                        <button type="button" class="btn btn-sm btn-outline-secondary" style="margin: 5px;">Update</button>
+                      </a>
+                      <a href="{% url 'blog_delete' blog_data.uid %}">
+                        <button type="button" class="btn btn-sm btn-outline-danger" style="margin: 5px;">Delete</button>
+                      </a>
+                      <a href="{% url 'blog_detail_page' blog_data.uid %}">
+                        <button type="button" class="btn btn-sm btn-outline-secondary" style="margin: 5px;">Read more</button>
+                      </a>
                   {% else %}
                   <a href="{% url 'blog_detail_page' blog_data.uid %}">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Read more</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary"style="margin: 5px;">Read more</button>
                   </a>
                 </div>
               
@@ -134,6 +166,18 @@
 
 
   {% endfor %}
+
+  {% else %}
+  <section class="py-5 text-center container">
+    <div class="row py-lg-5">
+      <div class="col-lg-6 col-md-8 mx-auto">
+        <h1 class="fw-light">No Blogs were found</h1>
+        
+      </div>
+    </div>
+  </section>
+{% endif %}
+
 </main>
 <footer class="text-muted py-5">
   <div class="container">
