--- a/rest_form/rest_api/templates/otp.html
+++ b/rest_form/rest_api/templates/otp.html
@@ -1,36 +1,61 @@
 {% include 'head.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container-fluid d-flex justify-content-md-center align-items-center">
-    <form action="{% url 'otp' %}" method="post">
-        {% csrf_token %}
-        <div class="panel-heading "><h6>We have sent OTP to your email 
-            {% if email %} {{ email }}{% endif %}
-            please check it</h6></div>
-        <div class="form-group">
-            <!-- <label for="exampleInputUsername1">OTP</label> -->
-            <div class="col-md-6">
-            {{ form|crispy }}
-            </div>
-            {% for msg in messages %}
-                {% if msg %}
-                    <small id="emailHelp" class="text-danger"> {{msg}}</small>
-                {% else %}
-                    <small id="emailHelp" class="text-danger">  {{ form.errors.otp }}</small>
-                    {% endif %}
-            {% endfor %}
-        </div>
-        
-        <div class="col-auto my-2">
-        <button type="submit" class="btn btn-primary">Enter</button>
+
+<div class="col-md-7 d-flex align-items-stretch container-fluid d-flex justify-content-md-center align-items-center">
+  <div class="px-lg-4 text-center text-primary w-100">
+      <img src="{{page_kwargs}}image/logo_new.jpg" width="100%" alt="">
+      <h3 class="mb-2 mt-0">We have sent OTP to your email {% if email %} {{ email }}{% endif %}
+        please check it</h3>
+      <!-- <p class="lead text-muted">Remember your memories with one click</p> -->
+  </div>
+</div>
+<!-- <div class="container h-100 d-flex"> -->
+    <!-- <div class="col-11 align-self-center"> -->
+        <div class="row container-fluid d-flex justify-content-md-center align-items-center">
+            <div class="col-md-4 d-flex align-items-stretch mt-4">
+                <div class="card w-160 px-5 shadow border-0">
+                    <div class="card-body">
+                      <form action="{% url 'otp' %}" method="post">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <!-- <label for="exampleInputUsername1">OTP</label> -->
+                            <div class="col-md-6">
+                            {{ form|crispy }}
+                            </div>
+                            {% for msg in messages %}
+                                {% if msg %}
+                                    <small id="emailHelp" class="text-danger"> {{msg}}</small>
+                                {% else %}
+                                    <small id="emailHelp" class="text-danger">  {{ form.errors.otp }}</small>
+                                    {% endif %}
+                            {% endfor %}
+                        </div>
+                        <div class="col-auto my-2" style="margin: 5px;">
+                            <button type="submit" class="btn btn-primary">Enter</button>
+                            <a href="{% url 'register' 'cancel' %}" class="btn btn-outline-primary"> Cancel</a>
+                                </div>
+
+                          <div class="col-auto my-2">
+                            <small id="emailHelp" class="text-dark">If you didnt receive OTP Yet 
+                            <a href="{% url 'otp' 'resend' %}" class="text-primary" style="text-decoration:none">Resend again</a>
+                          </small>      
+                          </div>    
+                                
+                                                  
+                                    
+                              </form>                
+                    </div>
+                </div>
             </div>
             
-        <div class="col-auto my-2">
-        <small id="emailHelp" class="text-dark"> If you didnt receive OTP Yet</small>
-        <a href="{% url 'otp' 'resend' %}" class="text-primary" style="text-decoration:none">Resend again</a>
-            </div>     
-      </form>
-
-</div>      
-
+        </div>
+    <!-- </div> -->
+<!-- </div> -->
+{% endblock %}
+{% block scripts %}
+<script>
+  // document.getElementById('id_password').setAttribute("oncopy","return false")
+  // document.getElementById('id_password').setAttribute("onpaste","return false")
+</script>
 {% endblock %}
